style: modify file structure

--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "dependencies": {
-    "commander": "^11.0.0"
+    "commander": "^11.0.0",
+    "crypto-js": "^4.1.1"
   },
   "name": "tsh",
   "description": "> terminal in ssh",
   "version": "1.0.0",
-  "main": "index.js",
   "bin": {
-    "tsh": "index.js"
+    "tsh": "src/tsh.js"
   },
   "directories": {
     "lib": "lib"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
